django_clearsessions.yaml
apiVersion: v1
kind: Pod

metadata:
  name: django-clearsessions

spec:
  containers:
    - name: django-clearsessions
      image: django_app:latest
      imagePullPolicy: Never
      command: ["python", "manage.py", "clearsessions"]
  restartPolicy: Never
