django_deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: django-deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-container
          image: django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
