k8s.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-container
          image: postgres:12.0-alpine
          ports:
            - containerPort: 5432

---

apiVersion: v1
kind: Service

metadata:
  name: postgres-service

spec:
  selector:
    app: postgres-db

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP

---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: django-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - name: django-container
          image: django_app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000

---

apiVersion: v1
kind: Service

metadata:
  name: django-service

spec:
  selector:
    app: django-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
