postgres_service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-service

spec:
  selector:
    app: postgres-db

  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432

  type: ClusterIP
